--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>Cheryl Campbell - Web Developer</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency.min.css" rel="stylesheet">
+  <link href="css/agency.css" rel="stylesheet">
 
 </head>
 
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">CherylAC.com</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -46,12 +46,6 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -61,7 +55,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Our Studio!</div>
+        <div class="intro-lead-in">Hi, I'm Cheryl!</div>
         <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
       </div>
@@ -73,34 +67,34 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Services</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">I specialize in..</h2>
+          <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">E-Commerce</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-        </div>
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Responsive Design</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">Web Development</h4>
+          <p class="text-muted">HTML, CSS, JavaScript, JavaScript Frameworks</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-sitemap fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Web Security</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">User Interface and Experience Design</h4>
+          <p class="text-muted">Information Architecture, User Research and Testing, Accessibility, Wireframing and Prototyping</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-star-of-life fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Optimization</h4>
+          <p class="text-muted">Responsive Design, Usability, Accessiblity, SEO, Analytics Tools, A/B testing, Refactoring</p>
         </div>
       </div>
     </div>
@@ -112,7 +106,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Here are some projects I have done.</h3>
         </div>
       </div>
       <div class="row">
@@ -123,11 +117,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/productpage.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>Product Page</h4>
+            <p class="text-muted">Website Prototype</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -137,11 +131,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/babypool1.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>Web Application</h4>
+            <p class="text-muted">Using Vue.js and Firebase</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -151,11 +145,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/User_Scienc_thumb.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
+            <h4>User Science Journal</h4>
+            <p class="text-muted">Blog of usability reviews</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -165,11 +159,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/browsergame.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
+            <h4>Browser Game</h4>
+            <p class="text-muted">Online game powered by JavaScript</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -179,11 +173,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/prototype2.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Southwest</h4>
-            <p class="text-muted">Website Design</p>
+            <h4>Business Page</h4>
+            <p class="text-muted">Mockup for a business website</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -193,11 +187,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/decisionmaker.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
+            <h4>Web Application</h4>
+            <p class="text-muted">Web app using Yes/No API</p>
           </div>
         </div>
       </div>
@@ -210,7 +204,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">I'm what you may call a dev-igner, des-eloper or maybe even a full stack designer. I am skilled in using front-end technologies to build elegant, responsive web applications with a focus on the end user. Got a project? Please get in touch!</h3>
         </div>
       </div>
       <div class="row">
@@ -220,7 +214,7 @@
               <div class="timeline-image">
                 <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
               </div>
-              <div class="timeline-panel">
+              <!--<div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>2009-2011</h4>
                   <h4 class="subheading">Our Humble Beginnings</h4>
@@ -281,12 +275,12 @@
             </li>
           </ul>
         </div>
-      </div>
+      </div>-->
     </div>
   </section>
 
   <!-- Team -->
-  <section class="bg-light page-section" id="team">
+  <!--<section class="bg-light page-section" id="team">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -374,9 +368,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
-  <!-- Clients -->
+  <!-- Clients 
   <section class="py-5">
     <div class="container">
       <div class="row">
@@ -402,10 +396,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <!-- Contact -->
-  <section class="page-section" id="contact">
+  <!--<section class="page-section" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -447,42 +441,40 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
+
 
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; Cheryl Campbell 2019</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/cherylcampbell19/">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
+            <li class="list-inline-item">
+              <a href="https://github.com/cherylac">
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+            <!---<li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-stack-overflow"></i>
+              </a>
+            </li>-->
           </ul>
         </div>
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
+              <a href="#">Back to Top</a>
+              </li>
           </ul>
         </div>
       </div>
@@ -505,15 +497,15 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                <ul class="list-inline">
+                <h2 class="text-uppercase">Product Page</h2>
+                <p class="item-intro text-muted">Prototype</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/productpage.png" alt="">
+                <p>For this project I designed and built a live, working prototype of single page website.</p>
+                <!--<ul class="list-inline">
                   <li>Date: January 2017</li>
                   <li>Client: Threads</li>
                   <li>Category: Illustration</li>
-                </ul>
+                </ul>-->
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
                   Close Project</button>
@@ -539,18 +531,16 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Explore</li>
-                  <li>Category: Graphic Design</li>
-                </ul>
+                <h2 class="text-uppercase">Contest Application</h2>
+                <p class="item-intro text-muted">Web App built using Vue.js and Firebase</p>
+                <img class="img-fluid d-block mx-auto" src="img/portfolio/babypool1.png" alt="">
+                <p>For this project I created an application for tracking a baby pool contest. The application updates in real time using Firebase.</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
                   Close Project</button>
+                  <a class="btn btn-primary" target="_blank" href="https://cherylac.com/CapstoneWATS4000-Pool/#/" type="button"><i class="fas fa-times"></i>View Project</a></button>
+                    
+      
               </div>
             </div>
           </div>
