--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <i class="fas fa-sitemap fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">User Interface and Experience Design</h4>
-          <p class="text-muted">Information Architecture, User Research and Testing, Accessibility, Wireframing and Prototyping</p>
+          <p class="text-muted">Information Architecture, Usability Testing, Accessibility, Wireframing and Prototyping</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -94,7 +94,7 @@
             <i class="fas fa-star-of-life fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Optimization</h4>
-          <p class="text-muted">Responsive Design, Usability, Accessiblity, SEO, Analytics Tools, A/B testing, Refactoring</p>
+          <p class="text-muted">Responsive Design, SEO, Analytics Tools, A/B testing, Refactoring</p>
         </div>
       </div>
     </div>
